# LR8

Task_1/: CMakeLists.txt  customer.c  elastic.c  file.c  header.h  input.c  main.c  menu.c  print.c
Task_2/: CMakeLists.txt  call.c  call.txt  elestic.c  file.c  header.h  input.c  main.c  menu.c  print.c
